[bdist_rpm]
release = 0
packager = rocky <rb@dustyfeet.com
doc_files = README

[bdist_wheel]
universal = 1

[metadata]
description_file = README.rst

[flake8]
max-line-length = 120
max-complexity = 12
select = E,F,W,C,B,B9
ignore = 
	E123
	E203
	E501
	W503
	W504
	C901
	E402
per-file-ignores = 
	pow/ansible/roles/jupyterhub/templates/jupyterhub_config*.py:F821
	pow/ansible/roles/webtier/files/supervisor_httpgroupok.py:E126,E128,E222,E225,E226,E261,E301,E302,E305,F841,E201,E202
	silhouette/src/silhouette/gprof2dot.py:E711,E713,E741,F401
	server/tests/files/expectations/*.py:F821

[egg_info]
tag_build = 
tag_date = 0

